[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Asteroid.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Rocket.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/bg.png" type="Texture" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -8, 0, 0, 0, 0, 0, 1920, 0, 0, 0, 0, 0, 1920, 1088, 0, 0, 0, 0, -8, 1088, 0, 0, 0, 0, -8, 584, 0, 0, 0, 0, -8, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
asteroid_scene = ExtResource( 2 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 960, 540 )

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2( -8, 0 )

[node name="Rocket" parent="." instance=ExtResource( 3 )]
position = Vector2( 632, 262 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 970, 524 )
scale = Vector2( 1.05833, 1.05833 )
z_index = -5
texture = ExtResource( 5 )

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="hit" from="Rocket" to="." method="_on_Rocket_hit"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
